Retweet alignment fix

--- a/mods/redsquare/web/css/redsquare-main.css
+++ b/mods/redsquare/web/css/redsquare-main.css
@@ -138,6 +138,8 @@ span.redsquare-home-red-square+span {
 
 .link-preview>.redsquare-item { 
   border-bottom: none;
+  padding-right: 0px;
+  padding-bottom: 0px;
 }
 
 .redsquare-item-contents {
@@ -523,4 +525,8 @@ span.redsquare-home-red-square+span {
 
 .saito-friendlist .saito-user {
   margin-bottom: 2rem;
+}
+
+.link-preview .redsquare-item-contents {
+  display: block;
 }
